# ncbi-taxdump-analyzer

./: .gitignore  Cargo.toml  README.md
input/: tax_name_pairs.tsv
scripts/: build_presence_db.py  export_record_sheets.py  fetch_gtdb_taxonomy.py  fetch_taxdump_archives.py  map_taxa_to_versions.py  run_gtdb_pipeline.sh  run_pipeline.sh
src/: build_presence_gtdb.rs  main.rs  map_taxa_to_versions.rs
