[package]
name = "taxdump-ingest"
version = "0.1.0"
edition = "2021"
default-run = "taxdet"

[[bin]]
name = "build_presence"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
glob = "0.3"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[[bin]]
name = "taxdet"
path = "src/map_taxa_to_versions.rs"

[[bin]]
name = "build_presence_gtdb"
path = "src/build_presence_gtdb.rs"
